--- a/fe_baprjct/public/css/login.css
+++ b/fe_baprjct/public/css/login.css
@@ -88,7 +88,7 @@
   height: 100%;
   width: 100%;
   opacity: 0.5;
-  background: #7d2ae8;
+  background: #DAA06D;
 }
 
 .login-cover .login-text .login-text-1,
@@ -115,6 +115,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-top: 65px;
 }
 
 .login-form-content .login-form,
@@ -126,7 +127,7 @@
   position: relative;
   font-size: 24px;
   font-weight: 500;
-  color: #333;
+  color: #DAA06D;
 }
 
 .login-forms .login-form-content .login-title:before {
@@ -136,7 +137,7 @@
   bottom: 0;
   height: 3px;
   width: 25px;
-  background: #7d2ae8;
+  background: #DAA06D;
 }
 
 .login-forms .login-signup-form .login-title:before {
@@ -170,7 +171,7 @@
 
 .login-form-content .login-input-box input:focus,
 .login-form-content .login-input-box input:valid {
-  border-color: #7d2ae8;
+  border-color: #DAA06D;
 }
 
 .login-form-content .login-input-box i {
@@ -187,10 +188,13 @@
 
 .login-forms .login-form-content .login-text a {
   text-decoration: none;
+  
+  color: #988558;
 }
 
 .login-forms .login-form-content .login-text a:hover {
   text-decoration: underline;
+  color:#722F37;
 }
 
 .login-forms .login-form-content .login-button {
@@ -200,7 +204,7 @@
 
 .login-forms .login-form-content .login-button input {
   color: #fff;
-  background: #7d2ae8;
+  background: #DAA06D;
   border-radius: 6px;
   padding: 0;
   cursor: pointer;
@@ -208,11 +212,11 @@
 }
 
 .login-forms .login-form-content .login-button input:hover {
-  background: #5b13b9;
+  background: #DAA06D;
 }
 
 .login-forms .login-form-content label {
-  color: #5b13b9;
+  color: #DAA06D;
   cursor: pointer;
 }
 
